Bug 158995 - Kword won't continue highlighting to the next page in document.
Summary: Kword won't continue highlighting to the next page in document.
Status: RESOLVED FIXED
Alias: None
Product: kword
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Thomas Zander
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2008-03-09 08:02 UTC by Caleb O'Connell
Modified: 2008-12-21 01:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Caleb O'Connell 2008-03-09 08:02:29 UTC
Version:            (using KDE 3.5.9)
Installed from:    Ubuntu Packages
OS:                Linux

when using the mouse to drag down to highlight lines of text in a document.  the highlighting doesn't continue from one page to another.  If I have a page of text, and I want to highlight the bottom half into the first paragraph on the next page, the highlighting stops at the end of the page and that's it, no more highlighting.
Comment 1 Rolf Eike Beer 2008-05-08 19:09:40 UTC
SVN commit 805479 by dakon:

Only minimize to tray if user closes the keysmanager window

I neither fully understand what's going on there nor do I like the solution. 
But at least it works for now.

BUG:158995


 M  +4 -4      keysmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=805479
Comment 2 Rolf Eike Beer 2008-05-08 19:46:16 UTC
Ehm, sorry. Typo in the bug number.
Comment 3 Gene Seto 2008-10-26 22:25:06 UTC
This specific problem was tested again on r875946 of koffice. This specific problem does not appear. 

Hum