Only minimize to tray if user closes the keysmanager window

I neither fully understand what's going on there nor do I like the solution. 
But at least it works for now.

BUG:158995

svn path=/trunk/KDE/kdeutils/kgpg/; revision=805479